<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/blanco_perla">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_editar_recurso"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="16dp"
        android:textColor="@color/color_primario" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo"
        android:padding="15dp"
        android:background="@drawable/edittext_background"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descripcion"
        android:padding="15dp"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="16dp"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tipo"
        android:padding="15dp"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="16dp"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editTextLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enlace"
        android:padding="15dp"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="16dp"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editTextImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_imagen"
        android:padding="15dp"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="16dp"
        android:textColorHint="@android:color/darker_gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUpdateResource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_actualizar"
        android:layout_marginTop="16dp"
        app:backgroundTint="@color/color_dorado"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        android:textColor="@color/color_texto_blanco"
        android:padding="12dp"
        android:textStyle="bold" />

</LinearLayout>
